# WallpaperForge

./: .gitignore  README.md  pyproject.toml  setup.ps1
config/: settings.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ImageGrid.tsx  ImageTile.tsx  PreviewModal.tsx  ScrapeProgress.tsx  SearchBar.tsx  SearchOverlay.tsx  Sidebar.tsx  Toolbar.tsx
tests/: test_crop.py  test_filter.py
wallpaperforge/: __init__.py  __main__.py  crop.py  filter.py  monitors.py  scraper.py  server.py  ui.py  upscale.py  wallpaper_setter.py
wallpaperforge/utils/: config.py  log.py
