[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wallpaperforge"
version = "0.1.0"
description = "Coleta, processa e exporta wallpapers 4K para múltiplos monitores"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # monitor detection
    "screeninfo>=0.8.1",
    # HTTP / scraping
    "httpx[http2]>=0.27.0",
    "duckduckgo-search>=6.2.0",
    # image processing
    "Pillow>=10.3.0",
    "imagehash>=4.3.1",
    "opencv-python>=4.10.0",
    # GUI
    "PySide6>=6.7.0",
    # terminal UX
    "rich>=13.7.0",
    # config
    "tomli>=2.0.1 ; python_version < '3.11'",
    # web interface
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
wallpaperforge = "wallpaperforge.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["wallpaperforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["wallpaperforge"]
omit = ["tests/*"]
